--- a/src/main/java/com/qa/config/config.properties
+++ b/src/main/java/com/qa/config/config.properties
@@ -2,6 +2,6 @@ URL = https://api.github.com/search/
 serviceURLSearchLabel = labels?q=bug+defect+enhancement&repository_id=64778136&sort=updated&order=asc
 serviceURLSearchCode = code?q=addClass+in:file+language:js+repo:jquery/jquery&sort=indexed&order=desc
 serviceURLSearchUser = users?q=tom+repos:%3E42+followers:%3E1000&sort=followers&order=asc
-serviceURLSearchTopics = topics?q=python+is:featured
+serviceURLSearchTopics = topics?q=python+is:featured&per_page=3
 serviceURLSearchRepositories = repositories?q=topic:ruby+topic:rails&sort=stars&order=desc&per_page=5
 serviceURLSearchUserRepository = https://api.github.com/users/SumanaManju/repos?sort=created&direction=asc
