GitHub Search API Few Test Cases: - SearchCode -> Query searches for the keyword addClass within a file's contents where the language is JavaScript in the jquery/jquery repository. - SearchLabel -> Query that find labels in the repository that match bug, defect, or enhancement - SearchRepositories -> Query that search for multiple topics in the repositories - SearchTopics -> Query searches for topics with the keyword ruby that are featured. - SearchUserRepository ->Query that  list repositories for a specific user - SeachUser -> Query that searches for users with the name tom with more than 42 repositories and over 1,000 followers.

--- a/src/main/java/com/qa/config/config.properties
+++ b/src/main/java/com/qa/config/config.properties
@@ -4,4 +4,4 @@ serviceURLSearchCode = code?q=addClass+in:file+language:js+repo:jquery/jquery&so
 serviceURLSearchUser = users?q=tom+repos:%3E42+followers:%3E1000&sort=followers&order=asc
 serviceURLSearchTopics = topics?q=python+is:featured&per_page=3
 serviceURLSearchRepositories = repositories?q=topic:ruby+topic:rails&sort=stars&order=desc&per_page=5
-serviceURLSearchUserRepository = https://api.github.com/users/SumanaManju/repos?sort=created&direction=asc
+serviceURLSearchUserRepository = https://api.github.com/users/SumanaManju/repos?sort=created&direction=asc&per_page=5
